Fixed alignment issue with company name and logo

--- a/mission-ceramics/src/styles/Cart.scss
+++ b/mission-ceramics/src/styles/Cart.scss
@@ -75,10 +75,9 @@
   display: inline-block;
   text-align: center;
   color: white;
-  font-family: 'Alegreya', serif;
-  font-size: 32px;
+  font-family: 'Alegreya SC', serif;
+  font-size: 24px;
   font-weight: 500;
-  // border-radius: 15px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   background: #B92227;
   cursor: pointer;
